java 14 solutions