@@ -1,9 +1,8 @@
 package com.epam.features._9_lib_enhancements._1_collection_factories;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -14,26 +13,18 @@ import java.util.stream.Stream;
 public class CollectionFactories {
     public static void main(String[] args) {
         // lists
-        System.out.println(Arrays.asList(1, 2, 3));
-        System.out.println(new ArrayList<>() {{
-            add(1);
-            add(2);
-            add(3);
-        }});
-        System.out.println(Stream.of(1, 2, 3).collect(Collectors.toList()));
+        System.out.println(List.of(1, 2, 3));
+        System.out.println(Stream.of(1, 2, 3).collect(Collectors.toUnmodifiableList()));
+
+        final var list = Stream.of(1, 2, 3).collect(Collectors.toList());
+        list.add(4);
+        List.copyOf(list);
 
         // sets
-        System.out.println(new HashSet<>(Arrays.asList(1, 2, 3)));
-        System.out.println(new HashSet<>() {{
-            add(1);
-            add(2);
-            add(3);
-        }});
+        System.out.println(Set.of(1, 2, 3));
 
         // maps
-        System.out.println(new HashMap<>() {{
-            put(1, 2);
-            put(3, 4);
-        }});
+        System.out.println(Map.of(1, 2, 3, 4));
+        System.out.println(Map.ofEntries(Map.entry(1, 2), Map.entry(3, 4)));
     }
 }
